--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <script type="text/javascript" src="./script.js" defer></script>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Address book</h1>
+    <div class="row">
+      <div class="col-md-6">
+        <h2>Add a contact:</h2>
+        
+      </div>
+    </div>
+  </div>
 </body>
 </html>
