--- a/index.html
+++ b/index.html
@@ -15,9 +15,18 @@
     <h1>Address book</h1>
     <div class="row">
       <div class="col-md-6">
-        <h2>Add a contact:</h2>
-        
-      </div>
+        <form id="new-contact">
+          <div class="form-group">
+              <label for="new-first-name">First name</label>
+              <input type="text" class="form-control" id="new-first-name">
+            </div>
+            <div class="form-group">
+              <label for="new-last-name">Last name</label>
+              <input type="text" class="form-control" id="new-last-name">
+            </div>
+
+            <button type="submit" class="btn">Add</button>
+        </form>
     </div>
   </div>
 </body>
