--- a/index.html
+++ b/index.html
@@ -1,33 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Address Book</title>
-  <link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="./style.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript" src="./assets/js/jquery-3.6.0.js" defer></script>
-  <script type="text/javascript" src="./script.js" defer></script>
-</head>
-<body>
-  <div class="container">
-    <h1>Address book</h1>
-    <div class="row">
-      <div class="col-md-6">
-        <form id="new-contact">
-          <div class="form-group">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Address Book</title>
+    <link href="./assets/css/bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="./style.css" rel="stylesheet" type="text/css" />
+    <script
+      type="text/javascript"
+      src="./assets/js/jquery-3.6.0.js"
+      defer
+    ></script>
+    <script type="text/javascript" src="./script.js" defer></script>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Address book</h1>
+      <div class="row">
+        <div class="col-md-6">
+          <h2>Add a contact:</h2>
+          <form id="new-contact">
+            <div class="form-group">
               <label for="new-first-name">First name</label>
-              <input type="text" class="form-control" id="new-first-name">
+              <input type="text" class="form-control" id="new-first-name" />
             </div>
             <div class="form-group">
               <label for="new-last-name">Last name</label>
-              <input type="text" class="form-control" id="new-last-name">
+              <input type="text" class="form-control" id="new-last-name" />
             </div>
 
             <button type="submit" class="btn">Add</button>
-        </form>
+          </form>
+          <h2>Contacts:</h2>
+          <ul id="contacts">
+            
+          </ul>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
